test_cases/pass/p13.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x, y
x=0
y=0
REPEAT WHEN (x >= 3 OR y >= 5)
START REPEAT
    x=x+1
    y=y+2
END REPEAT
PRINT: x & " " & y
END SCRIPT
