test_cases/fail/f06.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x > 0)
    PRINT: "yes"
END IF
END SCRIPT
